// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AccountVerificationRequestTableComponent > should display account verification requests table 1`] = `
<tm-account-verification-request-table
  accountService={[Function _AccountService]}
  accountVerificationRequests={[Function Array]}
  isApprovingAccountVerificationRequest={[Function Array]}
  navigationService={[Function _NavigationService]}
  statusMessageService={[Function _StatusMessageService]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        Pending Account Verification Requests
      </strong>
    </div>
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped data-table"
        id="search-table-account-verification-request"
      >
        <thead>
          <tr>
            <th>
              Name
            </th>
            <th>
              Email
            </th>
            <th>
              Status
            </th>
            <th>
              Institute
            </th>
            <th>
              Country
            </th>
            <th>
              Submitted At
            </th>
            <th>
              Comments
            </th>
            <th>
              Options
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              name
            </td>
            <td>
              email
            </td>
            <td>
              PENDING
            </td>
            <td>
              institute
            </td>
            <td>
            </td>
            <td
              id="timestamp-box"
            >
              Tue, 08 Feb 2022, 08:23 AM +00:00
            </td>
            <td>
              <div
                id="comment-box"
              >
                 comment 
              </div>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center gap-2"
              >
                <button
                  class="btn btn-success"
                  id="approve-account-verification-request-0"
                >
                   Approve 
                </button>
                <button
                  class="btn btn-warning"
                  id="review-account-verification-request-0"
                >
                   Review 
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              name
            </td>
            <td>
              email
            </td>
            <td>
              PENDING
            </td>
            <td>
              institute
            </td>
            <td>
            </td>
            <td
              id="timestamp-box"
            >
              Tue, 08 Feb 2022, 08:23 AM +00:00
            </td>
            <td>
              <div
                id="comment-box"
              >
                 comment 
              </div>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center gap-2"
              >
                <button
                  class="btn btn-success"
                  id="approve-account-verification-request-1"
                >
                   Approve 
                </button>
                <button
                  class="btn btn-warning"
                  id="review-account-verification-request-1"
                >
                   Review 
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-account-verification-request-table>
`;

exports[`AccountVerificationRequestTableComponent > should snap with an account verification requests table 1`] = `
<tm-account-verification-request-table
  accountService={[Function _AccountService]}
  accountVerificationRequests={[Function Array]}
  isApprovingAccountVerificationRequest={[Function Array]}
  navigationService={[Function _NavigationService]}
  statusMessageService={[Function _StatusMessageService]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        Pending Account Verification Requests
      </strong>
    </div>
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped data-table"
        id="search-table-account-verification-request"
      >
        <thead>
          <tr>
            <th>
              Name
            </th>
            <th>
              Email
            </th>
            <th>
              Status
            </th>
            <th>
              Institute
            </th>
            <th>
              Country
            </th>
            <th>
              Submitted At
            </th>
            <th>
              Comments
            </th>
            <th>
              Options
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              name
            </td>
            <td>
              email
            </td>
            <td>
              PENDING
            </td>
            <td>
              institute
            </td>
            <td>
            </td>
            <td
              id="timestamp-box"
            >
              Tue, 08 Feb 2022, 08:23 AM +00:00
            </td>
            <td>
              <div
                id="comment-box"
              >
                 comment 
              </div>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center gap-2"
              >
                <button
                  class="btn btn-success"
                  id="approve-account-verification-request-0"
                >
                   Approve 
                </button>
                <button
                  class="btn btn-warning"
                  id="review-account-verification-request-0"
                >
                   Review 
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-account-verification-request-table>
`;
